[gd_scene load_steps=7 format=2]

[ext_resource path="res://Art/Material/Selection.tres" type="Material" id=1]
[ext_resource path="res://Art/Building/SM_Bld_Adventure_Tower_01.obj" type="ArrayMesh" id=2]
[ext_resource path="res://Script/Selection.gd" type="Script" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.3, 0.75, 0.3 )

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("Viewport")

[sub_resource type="SphereShape" id=3]

[node name="Selection" type="Area"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 3 )

[node name="Mesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.666629, 0 )
mesh = ExtResource( 2 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0733705, 0 )
shape = SubResource( 1 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 1, 0, 2.28743, 0 )
flip_h = true
flip_v = true
texture = SubResource( 2 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 60, 20 )
transparent_bg = true

[node name="Label" type="Label" parent="Viewport"]
modulate = Color( 1, 0.654902, 0, 1 )
margin_right = 40.0
margin_bottom = 14.0
text = "Blablabla
"

[node name="Radar" type="Area" parent="."]
collision_layer = 0
collision_mask = 2
input_ray_pickable = false
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Radar"]
shape = SubResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Building_area_exited"]
[connection signal="area_entered" from="Radar" to="." method="_on_Radar_area_entered"]
[connection signal="area_exited" from="Radar" to="." method="_on_Radar_area_exited"]
